--- a/src/MauiTemplatesCLI/release-notes.txt
+++ b/src/MauiTemplatesCLI/release-notes.txt
@@ -1,6 +1,10 @@
-What's new in ver. 2.1.2:
+What's new in ver. 2.1.3:
 -------------------------
-Option to configure Windows target as Unpackaged type.
+The target-platform parameter is now updated as a multi-choice value. Can be opted-in according to the need.
+
+The default value would be Android, iOS, macOS, and Windows.
+
+And little housekeeping to improve the reliability of the templates.
 
 v2.1.1:
 
