--- a/src/Extensions/MauiTemplates/MauiTemplates/release-notes.txt
+++ b/src/Extensions/MauiTemplates/MauiTemplates/release-notes.txt
@@ -1,5 +1,11 @@
-What's new in ver. 2.1.1.1:
+What's new in ver. 2.1.3.0:
 ---------------------------
+The target-platform parameter is now updated as a multi-choice value. Can be opted-in according to the need.
+
+And little housekeeping to improve the reliability of the templates.
+
+v2.1.1.1:
+
 1. Template package updated to support newly released .NET 7 NuGet dependencies.
 
 2. For App project targeting .NET 7, option to add and configure Maui Foldable NuGet package.
