--- a/src/MauiTemplatesCLI/release-notes.txt
+++ b/src/MauiTemplatesCLI/release-notes.txt
@@ -1,7 +1,18 @@
-What's new in ver. 2.2.0:
+What's new in ver. 2.3.0:
 -------------------------
+1. Ability to add reference to CommunityToolkit.Maui.MediaElement NuGet package and configure it in startup pipeline for playing audio/video in a .NET MAUI app
+
+2. Dependent packages have been updated to reference latest stable version
+
+CommunityToolkit.Maui - v4.0.0
+CommunityToolkit.Mvvm - v8.1.0
+
+v2.2.0:
+
 1. Template package updated to support .NET 7 SR1 (v7.0.52).
+
 2. Base framework is also included as a target (net6.0/net7.0) to .NET MAUI App project template when the target-platform is set to All.
+
 3. To create a XAML-only resource dictionary template, include either --xaml-only (-xo) or --no-code-behind (-ncb) parameter.
 
 v2.1.3:
