--- a/src/MauiTemplatesCLI/release-notes.txt
+++ b/src/MauiTemplatesCLI/release-notes.txt
@@ -1,5 +1,27 @@
-What's new in ver. 3.0.0:
+What's new in ver. 3.0.1:
 -------------------------
+1. Additional parameters added to the Partial Class (class-cs) item template.
+
+Parameter Name - Type - Default value - Remarks
+-----------------------------------------------
+base - text - object - Specifies the base type for the class.
+abstract - bool - false - Option to create the type as abstract.
+partial - bool - true - Option to create the type as partial.
+sealed - bool - false - Option to create the type as sealed.
+static - bool - false - Option to create the type as static.
+
+Examples:
+
+dotnet new class-cs -n BaseViewModel -b ObservableObject
+
+Opting out of partial feature:
+
+dotnet new class-cs OrderDataStore -b IDataStore -p false
+
+2. Dependent packages have been updated to their latest versions.
+
+v3.0.0:
+
 Templates updated for .NET 8 Preview 1.
 
 Supported values for target framework parameter, can be specified with --framework / -f
@@ -22,7 +44,7 @@ v2.4.1:
 
 dotnet new class-cs -n BaseViewModel
 
-2. While creating a .NET MAUI APP, Base framework is now an option for target-platform parameter
+2. While creating a .NET MAUI App, Base framework is now an option for target-platform parameter
 
 Will be auto included when the target-platform value is set to All (the default value, if not supplied)
 
@@ -58,7 +80,7 @@ v2.3.0:
 
 2. Dependent packages have been updated to reference latest stable version
 
-CommunityToolkit.Maui - v4.0.0
+CommunityToolkit.Maui - v5.0.0
 CommunityToolkit.Mvvm - v8.1.0
 
 v2.2.0:
