--- a/src/MauiTemplatesCLI/release-notes.txt
+++ b/src/MauiTemplatesCLI/release-notes.txt
@@ -1,8 +1,8 @@
 What's new in ver. 3.1.0-preview.3:
 -----------------------------------
-1. Fixed the build issue (#109) of .NET MAUI class library with .NET MAUI Essentials targeting the Windows platform.
+1. Fixed the build issue (#109) of the .NET MAUI class library with .NET MAUI Essentials targeting the Windows platform.
 
-2. Added to option to create a .NET MAUI App using Razor syntax with BlazorBindings.Maui NuGet package.
+2. Added the option to create a .NET MAUI App using Razor syntax with BlazorBindings.Maui NuGet package.
 
 To facilitate this, the design-pattern parameter now takes the option of Razor.
 
@@ -10,7 +10,7 @@ dotnet new mauiapp -o BlazorBindings -dp Razor
 
 dotnet new mauiapp -o BlazorBindings -f net8.0 -dp Razor
 
-3. Item templates for .NET MAUI ContentPage, ContentView and ShellPage using Razor syntax.
+3. Item templates for .NET MAUI ContentPage, ContentView, and ShellPage using Razor syntax.
 
 dotnet new maui-page-razor -n SearchPage
 
@@ -20,7 +20,7 @@ dotnet new maui-shell-razor -n AppShell
 
 4. Ability to set the access modifier (--access-modifier | --am) while creating a C# class from CLI.
 
-Default value is public.
+The default value is public.
 
 dotnet new class-cs -n Routes -am internal
 
