--- a/src/MauiTemplatesCLI/release-notes.txt
+++ b/src/MauiTemplatesCLI/release-notes.txt
@@ -1,5 +1,19 @@
-What's new in ver. 3.1.0-preview.5:
+What's new in ver. 3.1.0-preview.6:
 -----------------------------------
+1. Now MVVM option works with an App created with a Hybrid design pattern also.
+
+dotnet new mauiapp -o MyApp -dp Hybrid -mvvm
+
+2. Added the option to create a .NET MAUI App with the MVU pattern using Comet.
+
+To facilitate this, the design-pattern parameter now takes the option of Comet.
+
+dotnet new mauiapp -o MyApp -dp Comet
+
+Note: MVVM option won't have any impact on the App created with Comet option as it is based on the MVU design pattern.
+
+v3.1.0-preview.5:
+
 1. MVVM is a delightful and development-friendly design pattern to work with. To support this, a new parameter has been introduced:
 
 -mvvm | --use-mvvm and its default value is false.
