--- a/src/MauiTemplatesCLI/release-notes.txt
+++ b/src/MauiTemplatesCLI/release-notes.txt
@@ -1,5 +1,15 @@
-What's new in ver. 3.1.0-preview.6:
+What's new in ver. 3.1.0-preview.7:
 -----------------------------------
+1. Added the option to create a .NET MAUI App with the MVU pattern using Reactor.
+
+To facilitate this, the design-pattern parameter now takes the option of Reactor.
+
+dotnet new mauiapp -o MyApp -dp Reactor
+
+Note: MVVM option won't have any impact on the App created with Reactor option as it is based on the MVU design pattern.
+
+v3.1.0-preview.6:
+
 1. Now MVVM option works with an App created with a Hybrid design pattern also.
 
 dotnet new mauiapp -o MyApp -dp Hybrid -mvvm
