--- a/src/Extensions/MauiTemplates/MauiTemplates/release-notes.txt
+++ b/src/Extensions/MauiTemplates/MauiTemplates/release-notes.txt
@@ -1,5 +1,9 @@
-What's new in ver. 3.2.1.0:
+What's new in ver. 3.2.2.0:
 ---------------------------
+Conditionally defined supported platforms properties based on the target platform opted-in for .NET MAUI Class Library as well.
+
+v3.2.1.0:
+
 Templates updated to support .NET 8 Preview 3.
 
 v3.2.0.0:
