--- a/src/MauiTemplatesCLI/release-notes.txt
+++ b/src/MauiTemplatesCLI/release-notes.txt
@@ -1,7 +1,15 @@
 Join me on Developer Thoughts (https://egvijayanand.in/), an exclusive blog for articles on .NET MAUI and Blazor.
 
-What's new in ver. 3.2.4:
+What's new in ver. 3.3.0:
 -------------------------
+Templates updated for .NET 8 Preview 4.
+
+On .NET 8, explicit package references for Microsoft.Maui.Controls and Microsoft.Maui.Controls.Compatibility NuGet packages.
+
+Version # bumped to the latest stable for CommunityToolkit.Maui (v5.1.0) and CommunityToolkit.Mvvm (v8.2.0) NuGet packages.
+
+v3.2.4:
+
 Fixed the issue of _Imports.razor file getting excluded while creating a project in the Razor design pattern.
 
 v3.2.3:
