--- a/src/Extensions/MauiTemplates/MauiTemplates/release-notes.txt
+++ b/src/Extensions/MauiTemplates/MauiTemplates/release-notes.txt
@@ -1,5 +1,13 @@
-What's new in ver. 3.2.4.0:
+What's new in ver. 3.3.0.0:
 ---------------------------
+1. Templates updated for .NET 8 Preview 4
+
+2. On .NET 8, explicit package references for Microsoft.Maui.Controls and Microsoft.Maui.Controls.Compatibility NuGet packages
+
+3. Version # bumped to the latest stable for CommunityToolkit.Maui (v5.1.0) and CommunityToolkit.Mvvm (v8.2.0) NuGet packages
+
+v3.2.4.0:
+
 Fixed the issue of _Imports.razor file getting excluded while creating a project in the Razor design pattern.
 
 v3.2.3.0:
