--- a/src/MauiTemplatesCLI/release-notes.txt
+++ b/src/MauiTemplatesCLI/release-notes.txt
@@ -2,7 +2,7 @@ Join me on Developer Thoughts (https://egvijayanand.in/), an exclusive blog for 
 
 What's new in ver. 3.3.1:
 -------------------------
-For library projects on .NET 8, explicit package references for Microsoft.Maui.Controls and Microsoft.Maui.Controls.Compatibility NuGet packages.
+For library projects on .NET 8, explicit package references for Microsoft.Maui.* NuGet packages.
 
 v3.3.0:
 
