--- a/src/MauiTemplatesCLI/release-notes.txt
+++ b/src/MauiTemplatesCLI/release-notes.txt
@@ -1,7 +1,11 @@
 Join me on Developer Thoughts (https://egvijayanand.in/), an exclusive blog for articles on .NET MAUI and Blazor.
 
-What's new in ver. 3.3.1:
+What's new in ver. 3.3.2:
 -------------------------
+Made changes in the source files of Hybrid and Reactor project templates.
+
+v3.3.1:
+
 For library projects on .NET 8, explicit package references for Microsoft.Maui.* NuGet packages.
 
 v3.3.0:
