--- a/src/MauiTemplatesCLI/release-notes.txt
+++ b/src/MauiTemplatesCLI/release-notes.txt
@@ -1,7 +1,13 @@
 Join me on Developer Thoughts (https://egvijayanand.in/), an exclusive blog for articles on .NET MAUI and Blazor.
 
-What's new in ver. 3.3.2:
+What's new in ver. 3.4.0:
 -------------------------
+Templates updated for .NET 8 Preview 5.
+
+Version # bumped to the latest stable for CommunityToolkit.Maui (v5.2.*), CommunityToolkit.Maui.Markup (v3.2.*), and CommunityToolkit.Maui.MediaElement (2.0.*) NuGet packages.
+
+v3.3.2:
+
 Made changes in the source files of Hybrid and Reactor project templates.
 
 v3.3.1:
