--- a/src/MauiTemplatesCLI/release-notes.txt
+++ b/src/MauiTemplatesCLI/release-notes.txt
@@ -1,7 +1,23 @@
 Join me on Developer Thoughts (https://egvijayanand.in/), an exclusive blog for articles on .NET MAUI and Blazor.
 
-What's new in ver. 3.4.0:
+What's new in ver. 3.4.1:
 -------------------------
+Added support for the newly released CommunityToolkit.Maui.Maps NuGet package to support Maps feature on the Windows platform.
+
+Opting for this will include the NuGet package and configure it in the .NET MAUI startup in MauiProgram.cs
+
+Update your "Bing Maps API Key" for it work properly, visit https://www.bingmapsportal.com/ to generate one.
+
+Note: For now, this is supported only on .NET 7. Support for .NET 8 Preview in a future release.
+
+dotnet new mauiapp -o MyApp -inm
+
+(or)
+
+dotnet new mauiapp -o MyApp --include-maps
+
+v3.4.0:
+
 Templates updated for .NET 8 Preview 5.
 
 Version # bumped to the latest stable for CommunityToolkit.Maui (v5.2.*), CommunityToolkit.Maui.Markup (v3.2.*), and CommunityToolkit.Maui.MediaElement (2.0.*) NuGet packages.
