--- a/src/Extensions/MauiTemplates/MauiTemplates/release-notes.txt
+++ b/src/Extensions/MauiTemplates/MauiTemplates/release-notes.txt
@@ -1,5 +1,17 @@
-What's new in ver. 3.3.2.0:
+What's new in ver. 3.4.1.0:
 ---------------------------
+1. Templates updated for .NET 8 Preview 5
+
+2. Added support for the newly released CommunityToolkit.Maui.Maps NuGet package to support the Maps feature on the Windows platform.
+
+2.1 Opting for this will include the NuGet package and configure it in the .NET MAUI startup in MauiProgram.cs
+
+2.2 Update your "Bing Maps API Key" for it to work properly, visit https://www.bingmapsportal.com/ to generate one.
+
+Note: For now, this is supported only on .NET 7. Support for .NET 8 Preview in a future release.
+
+v3.3.2.0:
+
 1. For library projects on .NET 8, explicit package references for Microsoft.Maui.* NuGet packages
 
 2. Made changes in the source files of Hybrid and Reactor project templates
