--- a/src/MauiTemplatesCLI/release-notes.txt
+++ b/src/MauiTemplatesCLI/release-notes.txt
@@ -4,7 +4,7 @@ What's new in ver. 3.5.0:
 -------------------------
 Templates updated for .NET 8 Preview 6.
 
-CommunityToolkit.Maui.Maps for Windows platform now works on .NET 8 as well.
+CommunityToolkit.Maui.Maps for the Windows platform now work on .NET 8 as well.
 
 Opting for this will include the NuGet package and configure it in the .NET MAUI startup in MauiProgram.cs
 
