--- a/src/Extensions/MauiTemplates/MauiTemplates/release-notes.txt
+++ b/src/Extensions/MauiTemplates/MauiTemplates/release-notes.txt
@@ -1,5 +1,13 @@
-What's new in ver. 3.4.1.0:
+What's new in ver. 3.5.0.0:
 ---------------------------
+1. Templates updated for .NET 8 Preview 6
+
+2. CommunityToolkit.Maui.Maps for the Windows platform now work on .NET 8 as well
+
+Opting for this will include the NuGet package and configure it in the .NET MAUI startup in MauiProgram.cs
+
+v3.4.1.0:
+
 1. Templates updated for .NET 8 Preview 5
 
 2. Added support for the newly released CommunityToolkit.Maui.Maps NuGet package to support the Maps feature on the Windows platform.
