--- a/src/Extensions/MauiTemplates/MauiTemplates/release-notes.txt
+++ b/src/Extensions/MauiTemplates/MauiTemplates/release-notes.txt
@@ -1,5 +1,9 @@
-What's new in ver. 3.5.0.0:
+What's new in ver. 3.6.0.0:
 ---------------------------
+Templates updated for .NET 8 Preview 7.
+
+v3.5.0.0:
+
 1. Templates updated for .NET 8 Preview 6
 
 2. CommunityToolkit.Maui.Maps for the Windows platform now work on .NET 8 as well
