--- a/src/MauiTemplatesCLI/release-notes.txt
+++ b/src/MauiTemplatesCLI/release-notes.txt
@@ -1,7 +1,15 @@
 Join me on Developer Thoughts (https://egvijayanand.in/), an exclusive blog for articles on Xamarin.Forms, .NET MAUI and Blazor.
 
-What's new in ver. 4.3.0:
--------------------------
+What's new in ver. 4.4.0-preview.1:
+-----------------------------------
+Introduced an option for NuGet Central Package Management in CLI project templates.
+
+-cpm | --central-pkg-mgmt - The default value is false.
+
+dotnet new mauiapp -o MyApp -cpm
+
+v4.3.0
+
 Templates updated for .NET 8 RC2.
 
 v4.2.2:
