--- a/src/MauiTemplatesCLI/release-notes.txt
+++ b/src/MauiTemplatesCLI/release-notes.txt
@@ -1,7 +1,11 @@
 Join me on Developer Thoughts (https://egvijayanand.in/), an exclusive blog for articles on Xamarin.Forms, .NET MAUI and Blazor.
 
-What's new in ver. 4.4.0-preview.2:
+What's new in ver. 4.4.0-preview.3:
 -----------------------------------
+Started incorporating .NET 8 / C# 12 features wherever possible.
+
+v4.4.0-preview.2:
+
 Support for the CPM option extended to Class Library projects as well.
 
 dotnet new mauiclasslib -o MauiLib -cpm
