--- a/src/MauiTemplatesCLI/release-notes.txt
+++ b/src/MauiTemplatesCLI/release-notes.txt
@@ -1,7 +1,11 @@
 Join me on Developer Thoughts (https://egvijayanand.in/), an exclusive blog for articles on Xamarin.Forms, .NET MAUI and Blazor.
 
-What's new in ver. 4.4.0-preview.4:
+What's new in ver. 4.4.0-preview.5:
 -----------------------------------
+Another set of .NET 8 / C# 12 features (Primary Constructors).
+
+v4.4.0-preview.4:
+
 .NET MAUI Version on the Main page of the App.
 
 Another set of .NET 8 / C# 12 features.
